--- a/index.css
+++ b/index.css
@@ -26,11 +26,14 @@
 
 html, body{
     height: 100%;
-    width: 98%;
 }
 
 body {
     background-color: var(--Very-dark-blue);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .active {
@@ -38,13 +41,9 @@ body {
 }
 
 main {
-    height: 90vh;
-    width: 100%;   
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    
-    
+    height: 80%;
+    width: 100%;
+       
 }
 
 .container {
@@ -54,8 +53,9 @@ main {
     column-gap: 1rem;
     row-gap: 2rem;
     align-items: center;    
-    padding: 1rem 5rem;    
-    height: 100%;
+    justify-content: center;
+    padding: 1rem 1rem;    
+    
 }
 
 .item {
@@ -76,7 +76,7 @@ main {
 }
 
 .main {
-    grid-area: 1 / 1 / 3 / 1;
+    grid-area: 1 / 1 / 3 / 2;
 }
 
 .user {
